[gd_scene load_steps=8 format=3 uid="uid://bridq4lsf88sn"]

[ext_resource type="Script" path="res://comparador.gd" id="1_b4aib"]
[ext_resource type="Texture2D" uid="uid://djssti5jynahx" path="res://16x16 TopDown Nature/4_Seasons_Ground_Tiles.png" id="2_sy5v4"]
[ext_resource type="AudioStream" uid="uid://dv13bqp2apq27" path="res://sonidos/JDSherbert - Ultimate UI SFX Pack - Popup Open - 1.mp3" id="3_fd3eo"]
[ext_resource type="AudioStream" uid="uid://c6kyvuje5xp2v" path="res://sonidos/JDSherbert - Ultimate UI SFX Pack - Popup Close - 1.mp3" id="4_rglkw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxm12"]
size = Vector2(197, 167)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_45en4"]
texture = ExtResource("2_sy5v4")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0

[sub_resource type="TileSet" id="TileSet_kctoe"]
sources/0 = SubResource("TileSetAtlasSource_45en4")

[node name="comparador_chinche" type="Node2D"]
position = Vector2(99, 83)
script = ExtResource("1_b4aib")

[node name="area_chapulines" type="Area2D" parent="."]
position = Vector2(72, -3)

[node name="colision_chapulines" type="CollisionShape2D" parent="area_chapulines"]
position = Vector2(-75, 5)
shape = SubResource("RectangleShape2D_cxm12")
debug_color = Color(0.853005, 0.255267, 0.674191, 0.42)

[node name="area_hormigas" type="Area2D" parent="."]
position = Vector2(194, 173)

[node name="colision_hormigas" type="CollisionShape2D" parent="area_hormigas"]
position = Vector2(1, -4)
shape = SubResource("RectangleShape2D_cxm12")
debug_color = Color(0.853005, 0.255267, 0.674191, 0.42)

[node name="area_chinches" type="Area2D" parent="."]
position = Vector2(-1, 170)

[node name="colision_chinches" type="CollisionShape2D" parent="area_chinches"]
position = Vector2(-2, -1)
shape = SubResource("RectangleShape2D_cxm12")
debug_color = Color(0.853005, 0.255267, 0.674191, 0.42)

[node name="area_grillos" type="Area2D" parent="."]
position = Vector2(192, 3)

[node name="colision_grillos" type="CollisionShape2D" parent="area_grillos"]
position = Vector2(4, -1)
shape = SubResource("RectangleShape2D_cxm12")
debug_color = Color(0.853005, 0.255267, 0.674191, 0.42)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_kctoe")
format = 2
layer_0/tile_data = PackedInt32Array(-262147, 196608, 0, -196611, 196608, 1, -131075, 196608, 2, -262146, 262144, 0, -196610, 262144, 1, -131074, 262144, 2, -262145, 327680, 0, -196609, 327680, 1, -131073, 327680, 4, -327680, 393216, 0, -262144, 393216, 1, -196608, 393216, 2, -327679, 196608, 0, -262143, 196608, 1, -196607, 196608, 0, -196606, 196608, 0, -196605, 196608, 0, -196604, 196608, 0, -196603, 196608, 0, -262139, 196608, 1, -327675, 393216, 6, -327676, 196608, 0, -327677, 196608, 0, -327678, 196608, 0, -262142, 196608, 1, -262141, 196608, 1, -262140, 196608, 1, -262150, 262144, 3, -262149, 327680, 3, -262148, 393216, 3, -196614, 262144, 3, -131078, 262144, 3, -65542, 262144, 3, -6, 262144, 3, 131066, 262144, 3, 65530, 262144, 3, -196612, 196608, 4, -131077, 196608, 4, -196613, 196608, 4, -131076, 196608, 4, -65540, 196608, 4, -65541, 196608, 4, -65539, 196608, 4, -65538, 196608, 4, -2, 196608, 4, -3, 196608, 4, -4, 196608, 4, -5, 196608, 4, 65531, 196608, 4, 131067, 196608, 4, 131068, 196608, 4, 65532, 196608, 4, 65533, 196608, 4, 131069, 196608, 4, 131070, 196608, 4, 65534, 196608, 4, 131071, 262144, 5, 65536, 327680, 5, 65537, 393216, 5, 65538, 262144, 5, 65539, 262144, 5, 65540, 327680, 5, 65541, 393216, 5, -131067, 262144, 8, -65531, 196608, 3, -65532, 196608, 3, 4, 196608, 3, 5, 196608, 3, 3, 196608, 3, -65533, 196608, 3, -131069, 196608, 3, -131068, 196608, 3, -131072, 262144, 3, -131071, 327680, 3, -131070, 393216, 3, 0, 262144, 3, 1, 327680, 3, 2, 393216, 3, -65534, 327680, 4, -65535, 327680, 4, -65536, 327680, 4, -1, 327680, 4, 65535, 327680, 4, -65537, 327680, 4, 131072, 0, 3, 196608, 196608, 4, 262144, 0, 5, 131073, 65536, 3, 196609, 65536, 4, 262145, 196608, 7, 131074, 131072, 3, 196610, 131072, 4, 262146, 131072, 5, 196602, 0, 3, 262138, 0, 4, 327674, 0, 5, 196603, 196608, 4, 262139, 65536, 4, 327675, 65536, 5, 196604, 131072, 3, 262140, 196608, 4, 327676, 131072, 5, 262141, 196608, 4, 262142, 196608, 4, 262143, 196608, 4, 196605, 196608, 3, 196606, 196608, 3, 196607, 196608, 3, 327677, 196608, 5, 327678, 196608, 5, 327679, 196608, 5, 131075, 196608, 3, 196611, 196608, 3, 262147, 196608, 3, 262148, 196608, 3, 196612, 196608, 3, 131076, 196608, 3, 131077, 196608, 3, 196613, 196608, 3, 262149, 393216, 6, -262138, 196608, 7, -262137, 196608, 7, -262136, 196608, 7, -262135, 196608, 7, -327674, 196608, 6, -131066, 327680, 8, -131065, 393216, 8, -327673, 393216, 6, -327672, 196608, 8, -327671, 196608, 8, -327670, 393216, 6, -327669, 196608, 8, -262133, 196608, 8, -262134, 196608, 8, -196600, 196608, 8, -196601, 393216, 6, -196602, 196608, 8, -196599, 262144, 7, -131063, 262144, 7, -131064, 262144, 7, -131062, 327680, 7, -131061, 393216, 7, -196598, 327680, 6, -196597, 327680, 6, -196596, 393216, 6, -65528, 196608, 7, -65529, 196608, 6, -65530, 327680, 6, 6, 196608, 7, 7, 327680, 6, 8, 393216, 1, 9, 327680, 8, -65527, 196608, 7, -65526, 196608, 7, -65525, 196608, 7, 11, 196608, 7, 10, 196608, 7, 65547, 196608, 7, 65546, 196608, 7, 65545, 393216, 1, 65544, 393216, 6, 65543, 393216, 1, 65542, 196608, 7, 131078, 196608, 7, 131079, 393216, 1, 131080, 327680, 8, 131081, 393216, 1, 131082, 196608, 7, 196617, 196608, 6, 196616, 196608, 7, 196615, 196608, 7, 196614, 196608, 7, 262150, 196608, 8, 262151, 393216, 6, 262152, 196608, 8, 262153, 196608, 8, 262154, 393216, 6, 262155, 196608, 8, 196619, 327680, 6, 196618, 196608, 8, 131083, 196608, 8, 131084, 327680, 6, 196620, 327680, 6, 262156, 327680, 6, 262159, 262144, 8, 262160, 327680, 8, 262161, 393216, 8, 196625, 262144, 6, 196624, 196608, 8, 196623, 196608, 8, 131087, 327680, 8, 131088, 393216, 8, 131089, 196608, 8, 65553, 196608, 8, 65552, 196608, 8, 65551, 262144, 6, 15, 196608, 8, 16, 393216, 6, 17, 196608, 8, -65519, 196608, 8, -65520, 196608, 8, -65521, 196608, 8, -131057, 393216, 6, -131058, 196608, 6, -196594, 196608, 6, -196593, 0, 8, -196592, 65536, 8, -131056, 196608, 6, -131055, 196608, 6, -196591, 131072, 8, -262127, 131072, 7, -262128, 65536, 7, -262129, 196608, 7, -262130, 196608, 7, -262131, 196608, 7, -262132, 196608, 6, -327668, 196608, 6, -327667, 262144, 6, -327666, 196608, 6, -327665, 0, 6, -327664, 65536, 6, -327663, 131072, 6, -65524, 0, 6, 12, 196608, 7, 65548, 0, 8, -65523, 65536, 6, 13, 196608, 7, 65549, 196608, 7, -65522, 131072, 6, 14, 131072, 7, 65550, 131072, 8, -196595, 196608, 7, -131059, 196608, 7, -131060, 196608, 7, 131085, 196608, 7, 196621, 196608, 7, 262157, 196608, 7, 131086, 262144, 8, 196622, 327680, 7, 262158, 327680, 7, 327681, 196608, 7, 393217, 196608, 7, 458753, 196608, 7, 458752, 196608, 7, 524287, 196608, 7, 524286, 196608, 7, 524285, 196608, 7, 589821, 196608, 7, 655357, 196608, 7, 720891, 0, 6, 786427, 0, 7, 851963, 0, 8, 720892, 65536, 6, 786428, 65536, 7, 851964, 196608, 7, 720893, 131072, 6, 786429, 196608, 7, 851965, 393216, 8, 786434, 0, 6, 851970, 196608, 7, 917506, 0, 8, 786435, 65536, 6, 851971, 65536, 7, 917507, 65536, 8, 786436, 131072, 6, 851972, 131072, 7, 917508, 131072, 8, 524288, 0, 6, 589824, 0, 7, 655360, 0, 8, 524289, 65536, 6, 589825, 65536, 7, 655361, 196608, 7, 524290, 131072, 6, 589826, 196608, 7, 655362, 131072, 8, 983042, 262144, 6, 983043, 327680, 6, 983044, 393216, 6, 458747, 327680, 6, 655354, 327680, 6, 983039, 327680, 6, 983036, 327680, 6, 1048570, 327680, 6, 393219, 262144, 8, 393220, 327680, 8, 393221, 393216, 8, 655365, 393216, 8, 393210, 393216, 8, 983041, 393216, 8, 983045, 393216, 8, 786430, 262144, 7, 786431, 327680, 7, 720896, 393216, 7, 720897, 196608, 7, 786432, 196608, 7, 851968, 196608, 7, 851969, 196608, 7, 589827, 196608, 7, 589829, 196608, 7, 589828, 196608, 7, 917500, 196608, 7, 917501, 196608, 7, 917502, 196608, 7, 917503, 196608, 7, 851966, 393216, 6, 851967, 393216, 6, 458751, 262144, 6, 327684, 262144, 6, 327685, 262144, 6, 393212, 196608, 5, 393211, 196608, 5, 393215, 196608, 5, 458750, 196608, 5, 393214, 196608, 6, 393213, 327680, 6, 458749, 196608, 6, 458748, 196608, 6, 524284, 196608, 6, 524283, 327680, 6, 524282, 196608, 6, 458746, 196608, 6, 589818, 196608, 6, 589819, 327680, 6, 589820, 327680, 6, 655355, 196608, 6, 655356, 196608, 6, 327680, 196608, 6, 393216, 196608, 6, 327683, 196608, 6, 327682, 327680, 6, 393218, 196608, 6, 458754, 327680, 6, 458755, 196608, 6, 458756, 327680, 6, 458757, 196608, 6, 524293, 196608, 6, 524292, 327680, 6, 524291, 196608, 6, 655363, 196608, 6, 720899, 196608, 6, 720900, 196608, 6, 655364, 196608, 6, 720901, 327680, 0, 786437, 196608, 5, 851973, 196608, 6, 917509, 196608, 6, 720898, 196608, 6, 786433, 393216, 8, 917505, 196608, 6, 917504, 196608, 6, 983040, 327680, 6, 1048575, 393216, 8, 983038, 196608, 6, 983037, 196608, 6, 1048573, 196608, 6, 1048574, 393216, 8, 1048572, 196608, 6, 1048571, 196608, 6, 983035, 327680, 6, 917499, 196608, 6, 917498, 327680, 6, 983034, 327680, 6, 851962, 327680, 6, 786426, 196608, 6, 720890, 196608, 6, 589822, 196608, 6, 655358, 393216, 8, 720894, 327680, 6, 720895, 327680, 6, 655359, 393216, 8, 589823, 196608, 6, 589830, 262144, 7, 589831, 327680, 7, 589832, 262144, 7, 589833, 327680, 7, 589834, 393216, 7, 524299, 0, 3, 589835, 0, 4, 655371, 0, 5, 524300, 196608, 4, 589836, 65536, 4, 655372, 65536, 5, 524301, 131072, 3, 589837, 131072, 4, 655373, 131072, 5, 851983, 0, 3, 917519, 0, 4, 983055, 0, 5, 851984, 65536, 3, 917520, 65536, 4, 983056, 65536, 5, 851985, 131072, 3, 917521, 131072, 4, 983057, 131072, 5, 851976, 0, 3, 917512, 0, 4, 983048, 0, 5, 851977, 65536, 3, 917513, 65536, 4, 983049, 65536, 5, 851978, 131072, 3, 917514, 196608, 4, 983050, 131072, 5, 327693, 196608, 4, 393229, 393216, 1, 393228, 393216, 1, 458764, 393216, 1, 720908, 196608, 4, 786444, 196608, 4, 851980, 196608, 4, 851981, 393216, 1, 917517, 393216, 1, 917518, 196608, 4, 917515, 196608, 4, 851979, 196608, 3, 917516, 262144, 4, 524303, 262144, 5, 524304, 327680, 5, 524305, 393216, 5, 327695, 393216, 5, 524296, 393216, 5, 983052, 393216, 5, 655366, 196608, 6, 851975, 393216, 5, 983047, 393216, 5, 655376, 393216, 5, 720902, 196608, 5, 720903, 196608, 5, 786439, 196608, 5, 786438, 327680, 0, 851974, 196608, 5, 917510, 196608, 5, 917511, 393216, 3, 983046, 196608, 5, 983051, 196608, 5, 983054, 393216, 3, 983053, 196608, 5, 851982, 327680, 3, 786446, 327680, 2, 786445, 196608, 5, 720909, 196608, 5, 720910, 196608, 5, 720911, 327680, 0, 786447, 196608, 5, 786448, 196608, 5, 786449, 327680, 0, 720913, 196608, 5, 655377, 196608, 5, 720912, 196608, 5, 589841, 196608, 5, 589840, 196608, 5, 589839, 262144, 3, 655375, 196608, 5, 655374, 262144, 3, 589838, 262144, 3, 524302, 196608, 5, 458766, 327680, 0, 458765, 196608, 5, 458767, 196608, 5, 458768, 196608, 5, 458769, 196608, 5, 393233, 196608, 5, 327697, 196608, 5, 327696, 196608, 5, 393232, 327680, 0, 393231, 196608, 5, 393230, 196608, 5, 327694, 196608, 5, 327692, 393216, 3, 327691, 196608, 5, 327690, 196608, 5, 327689, 196608, 5, 327688, 393216, 0, 327687, 196608, 5, 327686, 262144, 3, 393222, 196608, 5, 458758, 196608, 5, 524294, 327680, 3, 524295, 196608, 5, 458759, 393216, 0, 393223, 393216, 0, 393224, 196608, 5, 393225, 196608, 5, 393226, 393216, 0, 393227, 196608, 5, 458763, 196608, 5, 458762, 196608, 5, 458761, 327680, 2, 524297, 327680, 3, 524298, 196608, 5, 458760, 196608, 5, 655367, 196608, 5, 655368, 196608, 5, 655369, 393216, 0, 655370, 196608, 5, 720906, 393216, 3, 720905, 327680, 3, 720904, 262144, 3, 786440, 196608, 5, 786441, 393216, 0, 786442, 196608, 5, 786443, 393216, 3, 720907, 196608, 5)

[node name="correcto" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fd3eo")
pitch_scale = 1.5

[node name="incorrecto" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rglkw")
pitch_scale = 1.5

[connection signal="area_shape_entered" from="area_chapulines" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_entered" from="area_hormigas" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_entered" from="area_hormigas" to="." method="_on_area_hormigas_area_shape_entered"]
[connection signal="area_shape_entered" from="area_chinches" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_entered" from="area_chinches" to="." method="_on_area_chinches_area_shape_entered"]
[connection signal="area_shape_entered" from="area_grillos" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_entered" from="area_grillos" to="." method="_on_area_grillos_area_shape_entered"]
